--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
- 	
-		
+
+
 		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-html -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -140,6 +140,24 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>7.3.4</version>
 		</dependency>
-
 	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M7</version>
+					<configuration>
+						<testFailureIgnore>true</testFailureIgnore>
+						<includes>
+							<include>**/*Run.java</include>
+						</includes>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 </project>
