--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,15 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>7.3.4</version>
 		</dependency>
+
+		<!--
+		https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+		<dependency>
+			<groupId>tech.grasshopper</groupId>
+			<artifactId>extentreports-cucumber7-adapter</artifactId>
+			<version>1.10.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
